--- a/css/header.css
+++ b/css/header.css
@@ -51,7 +51,7 @@ body
 {
     font-weight: bold;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 #collection a
 {
