--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,10 @@ body
     margin: 0;
     font-family: 'Lato', sans-serif;
 }
-
+a {
+    color: black;
+    text-decoration: none;
+}
 #containerFooter
 {
     width: 100%;
